...
      }}
    >
      <Tabs.Screen
        name="memorizations"
        options={{
          title: t('tabs.memorizations'),
          tabBarButtonTestID: 'tab-memorizations',
          tabBarIcon: ({ color, size }) => (
            <Ionicons name="book-outline" color={color} size={size} />
          ),
        }}
      />
      <Tabs.Screen
...
